tests/fail/t14.e
array field not defined
cannot add int to void
